# clue_ws

./: Readme.md
install/: local_setup.sh  setup.sh
install/pca_servo/lib/pi_gpio/: pca_servo_server
install/pca_servo/share/pca_servo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pca_servo_interface/share/pca_servo_interface/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pca_servo_interface/share/pca_servo_interface/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_pca_servo_interface__rosidl_generator_cExport.cmake  export_pca_servo_interface__rosidl_generator_pyExport.cmake  export_pca_servo_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_pca_servo_interface__rosidl_typesupport_fastrtps_cppExport.cmake  pca_servo_interface__rosidl_typesupport_cExport-noconfig.cmake  pca_servo_interface__rosidl_typesupport_cExport.cmake  (+4 more)
install/pi_gpio_interface/share/pi_gpio_interface/: package.bash  package.zsh
log/: latest_build
ros2_pca_servo/pca_servo/: package.xml  setup.cfg  setup.py
ros2_pca_servo/pca_servo/pca_servo/: pca_servo_client.py  pca_servo_publisher.py  pca_servo_server.py
ros2_pca_servo/pca_servo_interface/: CMakeLists.txt  README.md  package.xml
ros2_pca_servo/pca_servo_interface/action/: PCAServo.action
ros2_pi_gpio-master/pi_gpio/: gpio_pins.txtZone.Identifier
ros2_pi_gpio-master/pi_gpio/pi_gpio/: pi_gpio_server.py
ros2_pi_gpio-master/pi_gpio_interface/action/: GPIO.action
(+16 files in other folders)
